# fvc7fe_DS5111su24_lab_01

./: .gitignore  All Modules.docx  Makefile  README.md  book_ids.txt  get_the_books.sh  pyproject.toml  test_text_processing.py  text_processing.py
env/: pyvenv.cfg
src/pkg_fvc7fe/: text_processing.py
