[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pkg_fvc7fe"
version = "0.1.0"
description = "A Python package for text processing."
authors = [
    { name = "Chris G", email = "fvc7fe@virginia.edu" }
]
readme = "README.md"
requires-python = ">=3.7"
